--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_core: ^1.10.6
   flutter:
     sdk: flutter
+  given_when_then: ^0.2.0
 
 dev_dependencies:
   flutter_test:
