--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 
 dependencies:
   cloud_firestore: ^3.1.5
+  fake_cloud_firestore: ^1.2.0
   firebase_core: ^1.10.6
   flutter:
     sdk: flutter
