--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,14 @@ environment:
 
 dependencies:
   cloud_firestore: ^3.1.5
+  equatable: ^2.0.3
   fake_cloud_firestore: ^1.2.0
   firebase_core: ^1.10.6
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.0
   given_when_then: ^0.2.0
+  result_type: ^0.1.0
 
 dev_dependencies:
   flutter_test:
