--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,13 @@ dependencies:
   cloud_firestore: ^3.1.5
   equatable: ^2.0.3
   fake_cloud_firestore: ^1.2.0
+  firebase_auth: ^3.3.4
   firebase_core: ^1.10.6
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.0
   given_when_then: ^0.2.0
+  google_sign_in: ^5.2.1
   result_type: ^0.1.0
 
 dev_dependencies:
