--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@
 **/ios/Flutter/.last_build_id
 .dart_tool/
 .flutter-plugins
-.flutter-plugins-dependencies
+**/.flutter-plugins-dependencies
 .packages
 .pub-cache/
 .pub/
