--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
   sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
+  authentication_public:
+    path: ../authentication_public
   cloud_firestore: ^3.1.5
   equatable: ^2.0.3
   fake_cloud_firestore: ^1.2.0
