--- a/authentication_private/pubspec.yaml
+++ b/authentication_private/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   given_when_then: ^0.2.0
   google_sign_in: ^5.2.1
+  google_sign_in_mocks: ^0.2.1
 
 dev_dependencies:
   flutter_test:
