--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -9,8 +9,11 @@ environment:
   sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
+  authentication_private:
+    path: ../authentication_private
   authentication_public:
     path: ../authentication_public
+  bloc_test: ^9.0.2
   cloud_firestore: ^3.1.5
   equatable: ^2.0.3
   fake_cloud_firestore: ^1.2.0
