--- a/authentication_public/pubspec.yaml
+++ b/authentication_public/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  bloc_test: ^9.0.2
   flutter:
     sdk: flutter
   authentication_private:
@@ -21,3 +22,4 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+  mocktail: ^0.2.0
