--- a/authentication_private/pubspec.yaml
+++ b/authentication_private/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   given_when_then: ^0.2.0
   google_sign_in: ^5.2.1
   google_sign_in_mocks: ^0.2.1
+  mocktail: ^0.2.0
 
 dev_dependencies:
   flutter_test:
