--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   equatable: ^2.0.3
   fake_cloud_firestore: ^1.2.0
   firebase_core: ^1.10.6
+  firestore_private:
+    path: ../firestore_private
+  firestore_public:
+    path: ../firestore_public
   flow_builder: ^0.0.6
   flutter:
     sdk: flutter
