--- a/firestore_public/pubspec.yaml
+++ b/firestore_public/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  equatable: ^2.0.3
   firestore_private:
     path: ../firestore_private
   flutter:
