--- a/firestore_private/pubspec.yaml
+++ b/firestore_private/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   cloud_firestore: ^3.1.6
   fake_cloud_firestore: ^1.2.0
+  firestore_public:
+    path: ../firestore_public
   flutter:
     sdk: flutter
 
