--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   authentication_public:
     path: ../authentication_public
   bloc_test: ^9.0.2
+  cache_client:
+    path: ../cache_client
   cloud_firestore: ^3.1.5
   equatable: ^2.0.3
   fake_cloud_firestore: ^1.2.0
