--- a/authentication_private/pubspec.yaml
+++ b/authentication_private/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   authentication_public:
     path: ../authentication_public
+  cache_client:
+    path: ../cache_client
   equatable: ^2.0.3
   firebase_auth: ^3.3.4
   flutter:
