--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -3,10 +3,7 @@ on: [push, workflow_dispatch]
 jobs:
   app_tests:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: app
     steps:
       - uses: actions/checkout@v1
       - uses: subosito/flutter-action@v1
-      - run: flutter test
+      - run: sh scripts.sh test
