--- a/scoreboard_public/pubspec.yaml
+++ b/scoreboard_public/pubspec.yaml
@@ -1,4 +1,4 @@
-name: firestore_public
+name: scoreboard_public
 description: A private pacakge for communicating with Firebase Firestore.
 version: 0.0.1
 publish_to: 'none'
