--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 **/.idea/libraries
 **/.idea/dictionaries
 **/.ideac/caches
+**/.idea/codeStyles
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
