--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,5 +1,7 @@
 name: test-my-app
-on: [push, workflow_dispatch]
+on: [pull_request, workflow_dispatch]
+  pull_request:
+    types: [opened, reopened]
 jobs:
   all_tests:
     runs-on: ubuntu-latest
