--- a/scoreboard_private/pubspec.yaml
+++ b/scoreboard_private/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  cloud_firestore_platform_interface: ^5.4.11
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
