--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@
 .pub-cache/
 .pub/
 /build/
+# don't check in golden failure output
+**/failures/*.png
 
 # Web related
 app/lib/generated_plugin_registrant.dart
