--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_bloc: ^8.0.0
   given_when_then: ^0.2.0
   result_type: ^0.1.0
+  golden_toolkit: ^0.12.0
 
 dev_dependencies:
   flutter_test:
